Working on scroll

--- a/pisoton.html
+++ b/pisoton.html
@@ -22,7 +22,9 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/pisoton.css">
     <link rel="stylesheet" href="css/buttons.css">
+    <link rel="stylesheet" href="css/timeline.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css" rel="stylesheet">
 </head>
 <body id="pisoton">
   <section id="banner" class="pisoton_banner">
@@ -87,6 +89,229 @@
       <div class="old-stories d-flex flex-column">
       </div>
     </div>
+  </section>
+  <section class="timeline-section">
+      <div class="timeline">
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide" data-year="1997">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_2.png);" ></div>
+              <div class="swiper-slide-content">
+                <span class="timeline-year">1997</span>
+                <p class="timeline-text">
+                  Como resultado de la tesis doctoral realizada por la Doctora en Filosofía y Ciencias de la Educación, Ana Rita Russo de Sánchez, nace el <i><strong>Programa de Desarrollo Psicoafectivo y Educación Emocional Pisotón</strong></i>.
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide" data-year="1999">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_3.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">1999</span> 
+                  <p class="timeline-text">
+                      Con el apoyo del entonces ministro de Educación, Germán Bula Escobar, se realiza una evaluación que señala que la rigurosidad investigativa de Pisotón tendría mucha aplicabilidad en la escuela y en programas no formales, hogares comunitarios y ludotecas.
+                      <br><br>
+                      Se inician aplicaciones piloto en diferentes regiones del país. El primer grupo atendido fue el de las víctimas del terremoto de Armenia. 
+                  </p>
+              </div>
+            </div>
+            <div class="swiper-slide" data-year="2000">
+                <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_3.png);" ></div>
+                <div class="swiper-slide-content">
+                    <span class="timeline-year">2000</span> 
+                    <p class="timeline-text">
+                        Se inicia la serie de televisión del Ministerio de Educación Nacional Creciendo en familia.
+                    </p>
+                </div>
+            </div>
+            <div class="swiper-slide" data-year="2001">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_4.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2001-2002</span> 
+                  <p class="timeline-text">
+                      Se firma una alianza con el Convenio Andrés Bello, el Gobierno nacional, el Instituto colombiano de Bienestar Familiar y la Universidad del Norte para formar junto con Pisotón Haz Paz de la Presidencia de la República y las alcaldías de Cartagena, Buenaventura y los departamentos de Sucre, Cundinamarca, Antioquia y Vaupés impactando la vida de casi 4000 familias.
+                  </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide" data-year="2003">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_4.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2003</span> 
+                  <p class="timeline-text">
+                      El Convenio Andrés Bello enmarca Pisotón dentro de sus mejores prácticas. Se inicia así el proceso de transferencia de conocimiento a sus países miembros, entre ellos, Panamá y Bolivia. Se establecen alianzas estratégicas con diferentes entidades internacionalmente reconocidas, como Unicef, el Instituto Internacional de Integración, la Corporación Andina de Fomento, entre otros.
+                  </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide" data-year="2004">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_4.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2004</span> 
+                  <p class="timeline-text">
+                      Pisotón llega a La Paz (Bolivia). Se destaca el trabajo con niños indígenas de La Paz y la importancia que las madres dieron al reconocimiento de las necesidades afectivas de sus hijos. 
+                  </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide" data-year="2005">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_4.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2005</span> 
+                  <p class="timeline-text">
+                      Pisotón llega a México. Se firma una alianza para la implementación de trece diplomados en grandes poblaciones del país, como Ciudad de México, Iztapalapa, Querétaro, Puebla, Nuevo León y Monterrey.
+                  </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide" data-year="2006">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_4.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2006</span> 
+                  <p class="timeline-text">
+                      Con el apoyo de la Fundación Mario Santo Domingo, se realiza un diplomado colombo -ecuatoriano, que eleva la calidad de vida del niño en el hogar y en la escuela.
+                  </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide" data-year="2007">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_5.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2007</span> 
+                  <p class="timeline-text">
+                    Pisotón cumple sus primeros diez años vinculando nuevos organismos nacionales e internacionales y empresas privadas en respuesta a sus proyectos de responsabilidad social que benefician a las madres comunitarias y los docentes de Barranquilla e Isla Barú.
+                  </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide" data-year="2008">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_5.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2008</span> 
+                  <p class="timeline-text">
+                      En convenio con Unicef, se emprenden acciones en poblaciones afectadas por catástrofes naturales. A esta iniciativa, se une la Fundación Mario Santo Domingo. <br><br>
+                      Las poblaciones menos favorecidas de Cartagena y Cáqueza-Quetame en Cundinamarca, reciben apoyo del programa Pisotón junto con el Servicio Nacional de Aprendizaje, Caracol Televisión y LA Fundación Mario Santo Domingo.                        
+                  </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide" data-year="2009">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_5.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2009</span> 
+                  <p class="timeline-text">
+                      Pisotón participa como facilitador en el proyecto Escuela busca al niño y a la niña, avalado por el Ministerio de Educación Nacional, la Alcaldía Distrital de Santa Marta y Unicef, con el apoyo de Ecopetrol, la Universidad del Magdalena y otras entidades. <br><br>
+                      Se crea el Premio Pisotón al Maestro en el marco del Primer Seminario Internacional de Educación y Desarrollo Psicoafectivo.                       
+                  </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide" data-year="2010">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_5.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2010</span> 
+                  <p class="timeline-text">
+                      Se crean las cartillas Nuestros primeros encuentros afectivos y educativos dirigidas a familias gestantes y lactantes. Junto con la Gobernación del Atlántico, la Fundación NU3 se lleva alimentación afectiva a 600 niños de Tubará y Baranoa (Atlántico). <br><br> 
+                      El Ministerio de Educación Nacional y Unicef firman un acuerdo para que Pisotón se desarrolle como una estrategia de respuesta para la recuperación psicosocial pos desastre invernal 2010-2011, con el apoyo de la Fundación Mario Santo Domingo.                                          
+                  </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide" data-year="2011">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_5.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2011</span> 
+                  <p class="timeline-text">
+                      Gran alianza público-privada para atender la emergencia invernal en el Atlántico.
+                      <br><br>
+                      El Ministerio de Educación Nacional, Unicef, la Fundación Mario Santo Domingo, Cliente Educa de Homecenter, la Fundación Bancolombia, la Fundación Zona Franca de Barranquilla y la Universidad del Norte se unen para llevar el nuevo Programa de Recuperación Psicoafectiva.
+                      <br><br>
+                      La Secretaría de Gobierno de Medellín lleva Pisotón a las comunas 1, 2, 4, 5, 8, 9 y 13, y a los corregimientos de San Cristóbal (comuna 60) y San Antonio de Prado (comuna 80), que beneficia a 687 niños y sus familias.
+                  </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide" data-year="2012">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_6.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2012</span> 
+                  <p class="timeline-text">
+                      Con un convenio entre el Ministerio de Educación Nacional y el apoyo de la Fundación Mario Santo Domingo, Ecopetrol, Cliente Educa de Homecenter y La Fundación Bancolombia, se cualifican 4500 agentes educativos de primera infancia en 17 departamentos del país, logrando impactar a más de veinte mil niños con el pilotaje.
+                      <br><br>
+                      En alianza con el Programa Nacional Escuela Segura de México y las secretarías de educación pública de Yucatán y San Luis Potosí, Pisotón gradúa a casi mil niños y niñas, sus familias y cuatrocientos docentes.
+                      <br><br>
+                      El Ministerio de Educación Nacional reconoce a Pisotón como los mejores en educación en el área de primera infancia.
+                  </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide" data-year="2013">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_6.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2013</span> 
+                  <p class="timeline-text">
+                      Continúa la cualificación de agentes educativos en alianza con el Ministerio de Educación Nacional junto con la Fundación Mario Santo Domingo, la Fundación Bancolombia, la Organización de Estados Iberoamericanos y Colpatria.
+                      <br><br>
+                      Pisotón impacta en 21 nuevos departamentos de Colombia y beneficia a 4300 agentes educativos y más de 11 000 niños, niñas y sus familias.
+                      <br><br>
+                      Se realiza el III Seminario Internacional de Educación y Desarrollo Psicoafectivo de la Primera Infancia: “Educar para transformar”. 
+                      <br><br>
+                      Semana Sostenible incluye a Pisotón como una de las cien ideas que están cambiando el mundo.
+                  </p>
+              </div>
+            </div>
+
+            <div class="swiper-slide" data-year="2014">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_6.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2014</span> 
+                  <p class="timeline-text">
+                      Luego de diecisiete años de trabajo en favor de los niños y las niñas de Colombia, Pisotón logra una cobertura total en el país, y llega al departamento de Vichada.
+                      <br><br>
+                      Con el Consejo Nacional de Fomento Educativo de México, se realizan dos procesos de formación de Quintana Roo y Coahuila para beneficiar a 200 maestros.                      
+                  </p>
+              </div>
+            </div>
+            <div class="swiper-slide" data-year="2015">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_6.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2015</span> 
+                  <p class="timeline-text">
+                      Una alianza con el Instituto Colombiano de Bienestar Familiar y el apoyo de la Fundación Mario Santo Domingo y la Fundación Bancolombia, logra que 1420 madres comunitarias de 14 departamentos reciban formación en la aplicación de Pisotón impactando a más de 3500 niños y sus familias.
+                      <br><br>
+                      Se destaca el trabajo realizado con las comunidades indígenas en Cumaribo (Vichada), gracias al apoyo de la Fundación Bancolombia. 
+                      <br><br>
+                      Asimismo, una intervención psicosocial se llevó a cabo con las familias que tuvieran que salir de Venezuela a causa del cierre fronterizo que se ubicaron es hogares de paso adecuados para ellos.                      
+                  </p>
+              </div>
+            </div>
+            <div class="swiper-slide" data-year="2016">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_6.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2016</span> 
+                  <p class="timeline-text">
+                      El Instituto Colombiano de Bienestar Familiar continua la formación de 1200 agentes educativos, en nueve departamentos del país. Además del Diplomado en Desarrollo Psicoafectivo y Educación Emocional, se realizó una profundización con agentes formados en años anteriores y la cualificación en el Programa de Recuperación Psicoafectiva.
+                      <br><br>
+                      Se implementa por primera vez el pilotaje con los nuevos cuentos de Pisotón de Recuperación Psicoafectiva dirigido a niños y jóvenes que han sufrido interferencias en su desarrollo.
+                      <br><br>
+                      Con la Alcaldía de Barranquilla, se lleva a cabo la formación de doscientos agentes educativos de la ciudad. Mercy Corps incluye a Pisotón dentro de sus proyectos para trabajar con los jóvenes en los internados de Putumayo.
+                  </p>
+              </div>
+            </div>
+            <div class="swiper-slide" data-year="2017">
+              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_7.png);" ></div>
+              <div class="swiper-slide-content">
+                  <span class="timeline-year">2017</span> 
+                  <p class="timeline-text">
+                    Pisotón celebra veinte años transformando vidas.
+                  </p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
   </section>
 
   <section id="cronology">
@@ -285,9 +510,12 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="js/libs/bootstrap/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
   <script src="js/mobileSelect.js"></script>
   <script src="js/handler.js"></script>
   <script src="js/pisotonPage.js"></script>
+  <script src="js/custom-timeline.js"></script>
+  
     <!--<script src="js/libs/jqueryValidate/jqueryvalidate.js"></script>-->
     <!--<script src="js/formhandler.js"></script>-->
 </body>
