Added Changes and New Games

--- a/games/ComoMeSiento/index.html
+++ b/games/ComoMeSiento/index.html
@@ -28,6 +28,9 @@
     <script src="src/ViewVideo.js"></script>
     <script src="src/BuenoEmocion.js"></script>
     <script src="src/FallidoEmocion.js"></script>
+    <script src = " https://unpkg.com/sweetalert/dist/sweetalert.min.js " > </script>
+
+
 </head>
 <body>
     <script>
