--- a/pisoton.html
+++ b/pisoton.html
@@ -6,7 +6,6 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-137172068-1');
       gtag('event', 'home-pisoton');
     </script>
@@ -115,7 +114,7 @@
               </div>
             </div>
             <div class="swiper-slide" data-year="2000">
-                <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_3.png);" ></div>
+                <div class="swiper-image"></div>
                 <div class="swiper-slide-content">
                     <span class="timeline-year">2000</span> 
                     <p class="timeline-text">
@@ -134,7 +133,7 @@
             </div>
 
             <div class="swiper-slide" data-year="2003">
-              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_4.png);" ></div>
+              <div class="swiper-image"></div>
               <div class="swiper-slide-content">
                   <span class="timeline-year">2003</span> 
                   <p class="timeline-text">
@@ -144,7 +143,7 @@
             </div>
 
             <div class="swiper-slide" data-year="2004">
-              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_4.png);" ></div>
+              <div class="swiper-image"></div>
               <div class="swiper-slide-content">
                   <span class="timeline-year">2004</span> 
                   <p class="timeline-text">
@@ -154,7 +153,7 @@
             </div>
 
             <div class="swiper-slide" data-year="2005">
-              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_4.png);" ></div>
+              <div class="swiper-image"></div>
               <div class="swiper-slide-content">
                   <span class="timeline-year">2005</span> 
                   <p class="timeline-text">
@@ -164,7 +163,7 @@
             </div>
 
             <div class="swiper-slide" data-year="2006">
-              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_4.png);" ></div>
+              <div class="swiper-image"></div>
               <div class="swiper-slide-content">
                   <span class="timeline-year">2006</span> 
                   <p class="timeline-text">
@@ -184,7 +183,7 @@
             </div>
 
             <div class="swiper-slide" data-year="2008">
-              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_5.png);" ></div>
+              <div class="swiper-image"></div>
               <div class="swiper-slide-content">
                   <span class="timeline-year">2008</span> 
                   <p class="timeline-text">
@@ -195,7 +194,7 @@
             </div>
 
             <div class="swiper-slide" data-year="2009">
-              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_5.png);" ></div>
+              <div class="swiper-image"></div>
               <div class="swiper-slide-content">
                   <span class="timeline-year">2009</span> 
                   <p class="timeline-text">
@@ -206,7 +205,7 @@
             </div>
 
             <div class="swiper-slide" data-year="2010">
-              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_5.png);" ></div>
+              <div class="swiper-image"></div>
               <div class="swiper-slide-content">
                   <span class="timeline-year">2010</span> 
                   <p class="timeline-text">
@@ -217,7 +216,7 @@
             </div>
 
             <div class="swiper-slide" data-year="2011">
-              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_5.png);" ></div>
+              <div class="swiper-image"></div>
               <div class="swiper-slide-content">
                   <span class="timeline-year">2011</span> 
                   <p class="timeline-text">
@@ -245,7 +244,7 @@
             </div>
 
             <div class="swiper-slide" data-year="2013">
-              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_6.png);" ></div>
+              <div class="swiper-image" ></div>
               <div class="swiper-slide-content">
                   <span class="timeline-year">2013</span> 
                   <p class="timeline-text">
@@ -261,7 +260,7 @@
             </div>
 
             <div class="swiper-slide" data-year="2014">
-              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_6.png);" ></div>
+              <div class="swiper-image" ></div>
               <div class="swiper-slide-content">
                   <span class="timeline-year">2014</span> 
                   <p class="timeline-text">
@@ -272,7 +271,7 @@
               </div>
             </div>
             <div class="swiper-slide" data-year="2015">
-              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_6.png);" ></div>
+              <div class="swiper-image" ></div>
               <div class="swiper-slide-content">
                   <span class="timeline-year">2015</span> 
                   <p class="timeline-text">
@@ -285,7 +284,7 @@
               </div>
             </div>
             <div class="swiper-slide" data-year="2016">
-              <div class="swiper-image" style="background-image: url(img/pisoton/cronology/PISOTON_6.png);" ></div>
+              <div class="swiper-image" ></div>
               <div class="swiper-slide-content">
                   <span class="timeline-year">2016</span> 
                   <p class="timeline-text">
