Addec changes to articles section

--- a/razones_y_corazones.html
+++ b/razones_y_corazones.html
@@ -52,7 +52,7 @@
       <div class="imageDesc reasons_and_hearts">
       </div>
       <div class="title p-1 p-md-5">
-          <h2> Movemos razones & corazones </h2>
+          <h2> Movemos Co&#8209razones </h2>
       </div>
     </div>
     <article class="emotion-row my-md-5">
