General changes to style and texts

--- a/maestros.html
+++ b/maestros.html
@@ -52,7 +52,7 @@
     <iframe  type="text/html" allowfullscreen style="width:100%;height:100%;display:none" src="" frameborder="0"></iframe>
     <div class="bannerImg teachers"></div>
     <div class="hidden" id="#tabSelect"></div>
-    <div class="generalWrapper">
+    <div class="generalWrapper parents-hero">
       <article>
         <h2></h2>
         <p></p>
@@ -64,7 +64,7 @@
   <section id="anarita">
     <div class="information-resources pt-3">
         <div class="articles-links py-2 py-lg-3 px-1 px-md-3">
-            <a class="mb-3 mr-md-5 text-lg-right" href="articles.php"><img src="img/pisoton/elementos-42.png" alt="Más allá de las técnicas"></a>
+            <a class="mb-3 mr-lg-5 text-lg-right" href="articles.php"><img src="img/pisoton/elementos-42.png" alt="Más allá de las técnicas"></a>
             <a class="mb-5 text-lg-left" href="articles.php"><img src="img/padres/elementos-40.png" alt="Razones y corazones"></a>
         </div>
     </div>
