--- a/nos_emociona_transformar.html
+++ b/nos_emociona_transformar.html
@@ -18,9 +18,11 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-4-utilities.min.css">
     <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/excited_to_transform.css">
+    <link rel="stylesheet" href="css/components/data-emotion.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
 <body>
@@ -70,7 +72,7 @@
       <a href="formacion.html"><div class="circleLink" id="formation"></div></a>
       <a href="investigacion.html"><div class="circleLink" id="investigation"></div></a>
     </div>
-    <article>
+    <article class="px-4">
       <div class="mapWrapper">
         <div class="hearts-reached my-2">
           <h2> Corazones que hemos tocado</h2>
