--- a/estructura.html
+++ b/estructura.html
@@ -18,8 +18,11 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-4-utilities.min.css">
     <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/components/data-emotion.css">
+    <link rel="stylesheet" href="css/estructura.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,900" rel="stylesheet">
 </head>
 <body>
@@ -46,12 +49,14 @@
         <p> Maestros, agentes educativos y tutores </p>
       </a>
     </navbar>
-  <section id="videos" class="intern">
-    <!--<h4>Para qué lo hacemos</h4>-->
-    <article class="internTopMsg">
-      Estructura
-    </article>
-  </section>
+    <section id="dataEmotion">
+      <div id="dataEmotionHeader" class="my-4">
+        <a href="estructura.html"><div class="circleLink active" id="structure"></div></a>
+        <a href="programa.html"><div class="circleLink" id="program"></div></a>
+        <a href="formacion.html"><div class="circleLink" id="formation"></div></a>
+        <a href="investigacion.html"><div class="circleLink" id="investigation"></div></a>
+      </div>
+    </section>
   <section id="info" class="intern maxWidth mt-0">
     <div id='emotionHeader'>
       <div class="title">
